--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
     "name": "react-timers-hooks",
     "version": "1.0.9",
     "description": "React reusable hooks for Timeout and Interval",
+    "homepage": "https://github.com/Rotarepmi/react-timers-hooks",
     "main": "lib/index.js",
     "scripts": {
         "build": "rm -rf ./lib && tsc"
     },
-    "author": "Jakub Mandra",
+    "author": {
+        "name": "Jakub Mandra",
+        "email": "mandra.jakub@gmail.com",
+        "url": "https://github.com/Rotarepmi"
+    },
     "license": "MIT",
     "devDependencies": {
         "@types/react": "^16.9.43",
