--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "homepage": "https://github.com/Rotarepmi/react-timers-hooks",
     "main": "lib/index.js",
     "scripts": {
-        "build": "rm -rf ./lib && tsc"
+        "build": "rm -rf ./lib && tsc",
+        "test-watch": "jest --watch",
+        "test-coverage": "jest --coverage",
+        "test": "jest"
     },
     "author": {
         "name": "Jakub Mandra",
@@ -14,10 +17,14 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@testing-library/react": "^11.2.2",
+        "@types/jest": "^26.0.19",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "jest": "^26.6.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "ts-jest": "^26.4.4",
         "typescript": "^4.1.3"
     },
     "repository": {
