--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "declaration": false,
         "sourceMap": true,
         "jsx": "react",
-        "typeRoots": ["./index.d.ts", "node_modules/@types"]
+        "typeRoots": ["./index.d.ts", "node_modules/@types"],
+        "esModuleInterop": true
     },
     "include": ["./src/**/*.tsx", "./src/**/*.ts", "./index.d.ts"],
     "exclude": ["node_modules"]
